know all GW nodes are aware of each other and can comunicate, they are also capabale of communicating to each other the transactions they recive

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 # vendor/
 /**/node_modules
 /**/peers.json
+/**/operational_data
+Services/EP/operational_data/messages.json
+Services/EP/operational_data/users.json
